# py-rest-service

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  cut-tag.yml  integration-tests.yml  promote-prd.yml  promote-stg.yml
.platform/kubernetes/base/: application.yaml
.platform/kubernetes/dev/: application_patch.yaml
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: rest-service.json
py-rest-service-api/: pyproject.toml
py-rest-service-api/src/ybor_technologies/big_rooster/py_rest/service/api/: __init__.py  example_service.py
py-rest-service-client/: pyproject.toml
py-rest-service-client/src/ybor_technologies/big_rooster/py_rest/service/client/: example_service_client.py
py-rest-service-core/: pyproject.toml
py-rest-service-core/src/ybor_technologies/big_rooster/py_rest/: __init__.py
py-rest-service-core/src/ybor_technologies/big_rooster/py_rest/service/core/: example_service_core.py
py-rest-service-integration-tests/: pyproject.toml
py-rest-service-integration-tests/tests/integration/: test_rest_connectivity.py
py-rest-service-integration-tests/tests/unit/: test_example_service_core.py
py-rest-service-integration-tests/tests/utils/: fixtures.py  rest_test_utils.py
py-rest-service-persistence/: alembic.ini  pyproject.toml
py-rest-service-persistence/alembic/: env.py
py-rest-service-persistence/alembic/versions/: 001_initial_database_schema.py
py-rest-service-persistence/src/ybor_technologies/big_rooster/py_rest/service/persistence/: __init__.py
py-rest-service-persistence/src/ybor_technologies/big_rooster/py_rest/service/persistence/entities/: __init__.py  py_rest_entity.py
py-rest-service-persistence/src/ybor_technologies/big_rooster/py_rest/service/persistence/repositories/: __init__.py  py_rest_repository.py
py-rest-service-server/: pyproject.toml
py-rest-service-server/src/ybor_technologies/big_rooster/py_rest/service/server/: __init__.py  app.py  main.py
py-rest-service-server/src/ybor_technologies/big_rooster/py_rest/service/server/config/: settings.py
py-rest-service-server/src/ybor_technologies/big_rooster/py_rest/service/server/middleware/: __init__.py  auth.py
scripts/: benchmark.py  init-db.sql  run-integration-tests.sh  run-server-ephemeral.sh  run-tests.sh  setup-dev.sh  start-dev.sh  validate_templates.py
