[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-rest-service-api"
version = "0.1.0"
description = "PyRestService REST API Component"
authors = [
    { name = "Ybor Technology <support@ybor.ai>" }
]

license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "py-rest-service-core",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
] 

[tool.hatch.build.targets.wheel]
packages = ["src/ybor_technologies"]

[tool.uv.sources]
py-rest-service-core = { path = "../py-rest-service-core", editable = true }